--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starter-redux-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://loisindeed.github.io/starter-redux-assessment",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
+    "gh-pages": "^6.1.1",
     "msw": "^0.42.1"
   }
 }
